--- a/public/page.html
+++ b/public/page.html
@@ -83,14 +83,14 @@
             <h2>УКРАЇНА</h2>
             <div class="block-left__item-case">
                 <div class="block-left__item-case1">
-                    <a href="#"><img src="img/page.jpg" alt="">
+                    <a href="single.html"><img src="img/single.jpg" alt="">
                         <div class="overlay"></div>
                     </a>
                 </div>
                 <div class="block-left__item-case2">
                     <span> Володимир Фінгерт</span>
                     <div class="block-left__item-title">
-                        <a href="#">"Политические трупы", Аваков и Кива: кто и
+                        <a href="single.html">"Политические трупы", Аваков и Кива: кто и
                             зачем скандалит в одной из самых известных
                             партий Украины</a>
                     </div>
