--- a/public/single.html
+++ b/public/single.html
@@ -71,14 +71,78 @@
                     </div>
                     <div class="search-wrapper">
                         <form><input type="text" name="search" placeholder="search">
-                            <button type="submit">Знайти</button></form>
+                            <button type="submit">Знайти</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Top menu end -->
     </header>
-    <div class="content"></div>
+    <!-- Content -->
+    <div class="content">
+        <div class="content viewport single-block">
+            <div class="block-left">
+                <h3>Україна</h3>
+                <div class="single-post">
+                    <h1>У Порошенко есть планы насчет людей, которые
+                        позвали Путина на Донбасс - Егор Фирсов</h1>
+                    <span> Володимир Фінгерт</span>
+                    <img src="img/single.jpg" alt="">
+                    <p>Помер відомий академік і філософ Мирослав Попович. Заслужений діяч науки і техніки
+                        України, доктор філософських наук, професор – народився 12 квітня 1930 року в
+                        Житомирі. Був одним із учасників ініціативної групи "Першого грудня".
+                    </p>
+                    <p>Моральний авторитет та великий мислитель. Саме таким запам'ятався українцям
+                        Мирослав Попович. Автор 4 сотень наукових праць, присвячених проблемам логіки,
+                        методології та філософії науки, а також історії культури. Протягом життя він отримав
+                        багато нагород. Зокрема, орден князя Ярослава Мудрого.</p>
+                    <p>У 2001 році став лауреатом Шевченківської премії. Широко відомою є його книга
+                        "Світогляд давніх слов'ян", яка стала справжнім переворотом у науковому світі та
+                        інтелектуальному середовищі. Минуле, казав, слід сприймати критично.</p>
+                    <p>Попович був одним із учасників ініціативної групи "Першого грудня", яка об'єднала відомих
+                        інтелектуалів та громадських діячів. Основною метою яких є становлення вільного народу
+                        України, здатного творити моральну політику, справедливу економіку та соціальне благо.</p>
+                    <p>Зокрема в одному останніх звернень, під яким підписався і Мирослав Попович, закликали
+                        політиків припинити війну "всіх проти всіх" та звернулися до народу:</p>
+                    <p>Будьмо вимогливі не лише до керівництва держави, а й передусім до самих себе. Гниття і
+                        розклад, що їх ми виразно бачимо "нагорі", є лише екстрактом того бруду, в якому
+                        погоджується жити українське суспільство "внизу". Якщо не хочемо бути рабами чергового
+                        тирана – перестаньмо бути рабами своїх негідних інстинктів.</p>
+                    <p>Прощання із відомим українським філософом Мирославом Поповичом відбудеться у
+                        вівторок 13 лютого. Поховають видатного українця на Байковому цвинтарі.</p>
+                </div>
+                <div class="telegram-link">
+                    <a href="#">Больше важных новостей в Telegram-канале «Enot». Подписывайся!</a>
+                </div>
+                <div class="more-theme">
+                    <ul>
+                        <li><a href="#" id="more-theme__active">Все по темі</a></li>
+                        <li>:</li>
+                        <li><a href="#">Польща</a></li>
+                        <li><a href="#">заробітчани</a></li>
+                    </ul>
+                </div>
+                <div class="also-read">
+                    <h4 class="also-read__title">Читайте також:</h4>
+                    <div class="also-read__item">
+                        <a href="#">Українська "Казка про гроші" - насправді не про гроші. Чому варто подивитися цей фільм</a>
+                    </div>
+                    <div class="also-read__item">
+                        <a href="#">Українська "Казка про гроші" - насправді не про гроші. Чому варто подивитися цей фільм</a>
+                    </div>
+                    <div class="also-read__item">
+                        <a href="#">Українська "Казка про гроші" - насправді не про гроші. Чому варто подивитися цей фільм</a>
+                    </div>
+                </div>
+            </div>
+            <div class="block-right">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad earum eveniet iusto laborum reiciendis.
+                Aliquid commodi consectetur dicta dolorum, est ex excepturi facere ipsam maiores nesciunt officia quae
+                quasi quod, repudiandae saepe veritatis voluptates.
+            </div>
+        </div>
+    </div>
     <footer id="footer">
         <div class="viewport">
             <div class="social-footer">
