--- a/public/page.html
+++ b/public/page.html
@@ -71,7 +71,8 @@
                     </div>
                     <div class="search-wrapper">
                         <form><input type="text" name="search" placeholder="search">
-                        <button type="submit">Знайти</button></form>
+                            <button type="submit">Знайти</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -131,22 +132,29 @@
                 <h3>Усі новини</h3>
                 <div class="page-all-news__item">
                     <div class="page-all-news__time">10:45</div>
-                    <div class="page-all-news__inner-wrapper"><div class="page-all-news__title"><a href="#">Поліція проводить навчання в Києві та просить не панікувати</a></div>
-                    <div class="page-all-news__description">
-                        У столиці України проходять навчання Національної поліції.
-                    </div></div>
+                    <div class="page-all-news__inner-wrapper">
+                        <div class="page-all-news__title"><a href="#">Поліція проводить навчання в Києві та просить не
+                            панікувати</a></div>
+                        <div class="page-all-news__description">
+                            У столиці України проходять навчання Національної поліції.
+                        </div>
+                    </div>
                 </div>
                 <div class="page-all-news__item">
                     <div class="page-all-news__time">10:45</div>
-                    <div class="page-all-news__inner-wrapper"><div class="page-all-news__title"><a href="#">Поліція проводить навчання в Києві та просить не панікувати</a></div>
-                    <div class="page-all-news__description">
-                        У столиці України проходять навчання Національної поліції.
-                    </div></div>
+                    <div class="page-all-news__inner-wrapper">
+                        <div class="page-all-news__title"><a href="#">Поліція проводить навчання в Києві та просить не
+                            панікувати</a></div>
+                        <div class="page-all-news__description">
+                            У столиці України проходять навчання Національної поліції.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="block-right">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut doloribus excepturi facere ipsum, minima nihil repudiandae voluptates! Animi beatae dolore mollitia quas repellat! Error.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut doloribus excepturi facere ipsum,
+            minima nihil repudiandae voluptates! Animi beatae dolore mollitia quas repellat! Error.
         </div>
     </div>
     <footer id="footer">
