--- a/public/page.html
+++ b/public/page.html
@@ -82,27 +82,25 @@
     <div class="content viewport page-block">
         <div class="block-left">
             <h2>УКРАЇНА</h2>
-            <div class="block-left__item-case">
+            <div class="block-left__item-case clear">
                 <div class="block-left__item-case1">
                     <a href="single.html"><img src="img/single.jpg" alt="">
                         <div class="overlay"></div>
                     </a>
                 </div>
-                <div class="block-left__item-case2">
-                    <span> Володимир Фінгерт</span>
-                    <div class="block-left__item-title">
-                        <a href="single.html">"Политические трупы", Аваков и Кива: кто и
-                            зачем скандалит в одной из самых известных
-                            партий Украины</a>
-                    </div>
-                    <div class="block-left__item-description">
-                        <p>Вокруг одной из самых популярных некогда политических сил
-                            Украины - Социалистической партии - снова начались конфликты.
-                            Председатель партии Илья Кива, лидер партии Петр Устенко и
-                            еще один политик, объявивший себя социалистом, народный
-                            депутат Сергей Каплин, не могут поделить лидерство.</p>
-                    </div>
 
+                <span> Володимир Фінгерт</span>
+                <div class="block-left__item-title">
+                    <a href="single.html">"Политические трупы", Аваков и Кива: кто и
+                        зачем скандалит в одной из самых известных
+                        партий Украины</a>
+                </div>
+                <div class="block-left__item-description">
+                    <p>Вокруг одной из самых популярных некогда политических сил
+                        Украины - Социалистической партии - снова начались конфликты.
+                        Председатель партии Илья Кива, лидер партии Петр Устенко и
+                        еще один политик, объявивший себя социалистом, народный
+                        депутат Сергей Каплин, не могут поделить лидерство.</p>
                 </div>
             </div>
             <div class="block-left__item-case">
@@ -111,21 +109,18 @@
                         <div class="overlay"></div>
                     </a>
                 </div>
-                <div class="block-left__item-case2">
-                    <span> Володимир Фінгерт</span>
-                    <div class="block-left__item-title">
-                        <a href="#">"Политические трупы", Аваков и Кива: кто и
-                            зачем скандалит в одной из самых известных
-                            партий Украины</a>
-                    </div>
-                    <div class="block-left__item-description">
-                        <p>Вокруг одной из самых популярных некогда политических сил
-                            Украины - Социалистической партии - снова начались конфликты.
-                            Председатель партии Илья Кива, лидер партии Петр Устенко и
-                            еще один политик, объявивший себя социалистом, народный
-                            депутат Сергей Каплин, не могут поделить лидерство. </p>
-                    </div>
-
+                <span> Володимир Фінгерт</span>
+                <div class="block-left__item-title">
+                    <a href="#">"Политические трупы", Аваков и Кива: кто и
+                        зачем скандалит в одной из самых известных
+                        партий Украины</a>
+                </div>
+                <div class="block-left__item-description">
+                    <p>Вокруг одной из самых популярных некогда политических сил
+                        Украины - Социалистической партии - снова начались конфликты.
+                        Председатель партии Илья Кива, лидер партии Петр Устенко и
+                        еще один политик, объявивший себя социалистом, народный
+                        депутат Сергей Каплин, не могут поделить лидерство. </p>
                 </div>
             </div>
             <div class="page-all-news">
