--- a/public/single.html
+++ b/public/single.html
@@ -37,9 +37,9 @@
                 </button>
                 <nav>
                     <ul>
-                        <li><a href="#" class="active">Новини</a></li>
+                        <li><a href="#">Новини</a></li>
                         <li>:</li>
-                        <li><a href="#">Україна</a></li>
+                        <li><a href="#"  class="active">Україна</a></li>
                         <li><a href="#">Світ</a></li>
                         <li><a href="#">Політика</a></li>
                         <li><a href="#">Кримінал</a></li>
