--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,13 @@
                         <div id="SinoptikInformer" style="width:240px;" class="SinoptikInformer type1"><div class="siHeader"><div class="siLh"><div class="siMh"><a onmousedown="siClickCount();" class="siLogo" href="https://ua.sinoptik.ua/" target="_blank" rel="nofollow" title="Погода"> </a>Погода <span id="siHeader"></span></div></div></div><div class="siBody"><table><tbody><tr><td class="siCityV" style="width:100%;"><a onmousedown="siClickCount();" href="https://ua.sinoptik.ua/погода-луцьк" title="Погода у Луцьку" target="_blank"><div class="siCityName"><span>Луцьк</span></a></div></tr><tr><td style="width:100%;"><div class="siCityV2"><a onmousedown="siClickCount();" href="https://ua.sinoptik.ua/погода-луцьк" title="Погода у Луцьку" target="_blank"><div id="siCont0" class="siBodyContent"><div class="siLeft"><div class="siTerm"></div><div class="siT" id="siT0"></div><div id="weatherIco0"></div></div><div class="siInf"><p>вологість: <span id="vl0"></span></p><p>тиск: <span id="dav0"></span></p><p>вітер: <span id="wind0"></span></p></div></div></a></div></td></tr></tbody></table><div class="siLinks">Погода на 10 днів від <a href="https://ua.sinoptik.ua/погода-луцьк/10-днів" title="Погода на 10 днів" target="_blank" onmousedown="siClickCount();">sinoptik.ua</a></div></div><div class="siFooter"><div class="siLf"><div class="siMf"></div></div></div></div><script type="text/javascript" charset="UTF-8" src="//sinoptik.ua/informers_js.php?title=4&amp;wind=3&amp;cities=303014409&amp;lang=ua"></script>
                     </div>
                     <div class="widgets-top__item">
-
+                        <!--Kurs.com.ua main-ukraine 240x130 blue-->
+                        <div id='kurs-com-ua-informer-main-ukraine-240x130-blue-container'><a href="//old.kurs.com.ua/informer" id="kurs-com-ua-informer-main-ukraine-240x130-blue" title="Курс валют информер Украина" rel="nofollow" target="_blank">Информер курса валют</a></div>
+                        <script type='text/javascript'>
+                            (function() {var iframe = '<ifr'+'ame src="//old.kurs.com.ua/informer/inf2?color=blue" width="240" height="130" frameborder="0" vspace="0" scrolling="no" hspace="0"></ifr'+'ame>';var container = document.getElementById('kurs-com-ua-informer-main-ukraine-240x130-blue');container.parentNode.innerHTML = iframe;})();
+                        </script>
+                        <noscript><img src='//old.kurs.com.ua/static/images/informer/kurs.png' width='52' height='26' alt='kurs.com.ua: курс валют в Украине!' title='Курс валют' border='0' /></noscript>
+                        <!--//Kurs.com.ua main-ukraine 240x130 blue-->
                     </div>
                 </div>
             </div>
