--- a/public/index.html
+++ b/public/index.html
@@ -116,9 +116,9 @@
                     </div>
                     <div class="widgets-top__item">
                         <!--Kurs.com.ua main-ukraine 240x130 blue-->
-                        <div id='kurs-com-ua-informer-main-ukraine-240x130-blue-container'><a href="//old.kurs.com.ua/informer" id="kurs-com-ua-informer-main-ukraine-240x130-blue" title="Курс валют информер Украина" rel="nofollow" target="_blank">Информер курса валют</a></div>
+                        <div id='kurs-com-ua-informer-main-ukraine-240x130-blue-container'><a href="//old.kurs.com.ua/ua/informer" id="kurs-com-ua-informer-main-ukraine-240x130-blue" title="Курс валют информер Украина" rel="nofollow" target="_blank">Информер курса валют</a></div>
                         <script type='text/javascript'>
-                            (function() {var iframe = '<ifr'+'ame src="//old.kurs.com.ua/informer/inf2?color=blue" width="240" height="130" frameborder="0" vspace="0" scrolling="no" hspace="0"></ifr'+'ame>';var container = document.getElementById('kurs-com-ua-informer-main-ukraine-240x130-blue');container.parentNode.innerHTML = iframe;})();
+                            (function() {var iframe = '<ifr'+'ame src="//old.kurs.com.ua/ua/informer/inf2?color=blue" width="240" height="130" frameborder="0" vspace="0" scrolling="no" hspace="0"></ifr'+'ame>';var container = document.getElementById('kurs-com-ua-informer-main-ukraine-240x130-blue');container.parentNode.innerHTML = iframe;})();
                         </script>
                         <noscript><img src='//old.kurs.com.ua/static/images/informer/kurs.png' width='52' height='26' alt='kurs.com.ua: курс валют в Украине!' title='Курс валют' border='0' /></noscript>
                         <!--//Kurs.com.ua main-ukraine 240x130 blue-->
