--- a/public/index.html
+++ b/public/index.html
@@ -407,21 +407,44 @@
     </div>
     <footer id="footer">
         <div class="viewport">
-            <div class="social-footer">
-                <span>&copy;2018 Enot.com</span>
-                <div class="social-footer__link">
-                    <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-youtube fa-lg"></i></a>
+            <div class="footer-description footer-block">
+                <div class="footer-logo">
+                    <a href=""><img src="img/footer-logo.png" alt=""></a>
+                </div>
+                <div class="footer-forbid footer-block">
+                    <p>При цитировании и использовании каких-либо
+                        материалов в Интернете  открытые для поисковых
+                        систем гиперссылки не ниже первого абзаца
+                        на <a href="/">www.dymka.com.ua/ru</a> — обязательны.</p>
                 </div>
             </div>
-            <div class="footer-forbid">
-                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт.
-                    Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
-                <p>
-                    Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст.
-                    34 Конституция Украины. Закон Украины "О информации"
-                </p>
+            <div class="social-footer footer-block">
+                <span>&copy;2018 Enot.com</span>
+                <div class="social-footer__link">
+                    <a href><i class="fa fa-facebook fa-2x"></i></a>
+                    <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+                    <a href="#"><i class="fa fa-youtube fa-2x"></i></a>
+                    <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+                    <a href="#"><i class="fa fa-youtube fa-2x"></i></a>
+                </div>
+            </div>
+            <div class="footer-menu">
+                <nav>
+                    <ul>
+                        <li><a href="#">О Нас</a></li>
+                        <li><a href="#">Вакансії</a></li>
+                        <li><a href="#">Редакція</a></li>
+                        <li><a href="#">Правила користування</a></li>
+                    </ul>
+                </nav>
+                <div class="footer-contact">
+                    <div class="footer-contact__mail">
+                        <a href="#">dymka@ukr.net &sol;</a>
+                    </div>
+                    <div class="footer-contact__phone">
+                        <a href="#">тел. 8097687546</a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
